--- a/COVID19-France.Rmd
+++ b/COVID19-France.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "Paris COVID19 Lockdown"
+title: "France COVID-19 Battle"
 author: "David Jackson"
-date: "11/16/2020"
+date: "11/21/2020"
 output: 
   html_document: 
     fig_width: 9
