--- a/COVID19-France.Rmd
+++ b/COVID19-France.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "France COVID-19 Battle"
 author: "David Jackson"
-date: "11/21/2020"
+date: "12/14/2020"
 output: 
   html_document: 
     fig_width: 9
@@ -19,77 +19,77 @@ theme_set(theme_light())
 ```{r}
 rm(list=ls())
 source("../DATA/movavg.R")
-db <- db <- dbConnect(RSQLite::SQLite(),dbname= "../COVIDDB/COVID.sqlite3")
-df <- dbGetQuery(db,"select * from ECDC")
-df <- subset(df,geoID =="FR" & Reported >="2020-03-04" )
-df$Reported <- lubridate::ymd(df$Reported)
+db <- db <- dbConnect(RSQLite::SQLite(),dbname= "../COVIDDB/OURWORLD.sqlite3")
+df <- dbGetQuery(db,"select * from JHU")
+df <- subset(df,location =="France" )
+df$date <- lubridate::ymd(df$date)
 #
-df <- df[order(df$Reported),]
-df$MAC <- movingAverage(df$Cases,14)
-df$MAD <- movingAverage(df$Deaths,14)
-df$MAD30 <- movingAverage(df$Deaths,60)
+df <- df[order(df$date),]
+# df$MAC <- movingAverage(df$Cases,14)
+# df$MAD <- movingAverage(df$Deaths,14)
+# df$MAD30 <- movingAverage(df$Deaths,60)
 ```
 
 ### France Daily Cases and Deaths
 
 ```{r}
-ggplot(df) +geom_line(aes(x=Reported,y=Cases,col="Cases")) +
-  geom_point(aes(x=Reported,y=Cases)) +
-  geom_smooth(aes(x=Reported,y=Cases,col="Loess"),span=0.25) +
+ggplot(df) +geom_line(aes(x=date,y=new_cases,col="Cases")) +
+  geom_point(aes(x=date,y=new_cases)) +
+  geom_smooth(aes(x=date,y=new_cases,col="Loess"),span=0.25) +
   labs(title="France Daily Covid19 Cases")
 ```
 
 ```{r}
-ggplot(df) +geom_line(aes(x=Reported,y=Deaths,col="Deaths")) +
-  geom_point(aes(x=Reported,y=Deaths)) +
-  geom_smooth(aes(x=Reported,y=Deaths,col="Loess"),span=0.25) +
+ggplot(df) +geom_line(aes(x=date,y=Deaths,col="Deaths")) +
+  geom_point(aes(x=date,y=Deaths)) +
+  geom_smooth(aes(x=date,y=Deaths,col="Loess"),span=0.25) +
   labs(title="France Daily Covid19 Deaths")
 ```
 
 #### Non-Moving Average By Week and By Month
 
 ```{r}
-df$Monthly <- as.Date(cut(df$Reported,
+df$Monthly <- as.Date(cut(df$date,
   breaks = "month"))
-df$Weekly <- as.Date(cut(df$Reported,
+df$Weekly <- as.Date(cut(df$date,
   breaks = "week",
   start.on.monday = FALSE))
 
 ```
 ```{r}
-Weekly_Cases <- aggregate(Cases~Weekly,df,FUN=sum)
-Weekly_Deaths <- aggregate(Deaths~Weekly,df,FUN=sum)
-Weekly_Cases$DRate <- Weekly_Deaths$Deaths/Weekly_Cases$Cases
-Weekly_Cases$LivedSaved <- Weekly_Cases$Cases * (max(Weekly_Cases$DRate) - Weekly_Cases$DRate) * 100
+Weekly_Cases <- aggregate(new_cases~Weekly,df,FUN=sum)
+Weekly_Deaths <- aggregate(new_deaths~Weekly,df,FUN=sum)
+Weekly_Cases$DRate <- Weekly_Deaths$new_deaths/Weekly_Cases$new_cases
+Weekly_Cases$LivedSaved <- Weekly_Cases$new_cases * (max(Weekly_Cases$DRate) - Weekly_Cases$DRate) * 100
 
 ```
 ```{r}
-ggplot(Weekly_Cases) + geom_col(aes(x=Weekly,y=Cases)) + 
-  labs(title="Weekly Cases",x="Date Reported", y="Weekly Cases") +
-  geom_hline(yintercept = mean(Weekly_Cases$Cases),col="red",lwd=1.5) +
+ggplot(Weekly_Cases) + geom_col(aes(x=Weekly,y=new_cases)) + 
+  labs(title="Weekly Cases",x="Date date", y="Weekly Cases") +
+  geom_hline(yintercept = mean(Weekly_Cases$new_cases),col="red",lwd=1.5) +
   scale_y_continuous(labels = scales::comma) 
 
-ggplot(Weekly_Deaths) + geom_col(aes(x=Weekly,y=Deaths)) + 
-  labs(title="Weekly Deaths",x="Date Reported", y="Weekly Deaths") +
+ggplot(Weekly_Deaths) + geom_col(aes(x=Weekly,y=new_deaths)) + 
+  labs(title="Weekly Deaths",x="Date date", y="Weekly Deaths") +
   scale_y_continuous(labels = scales::comma) +
-  geom_hline(yintercept = mean(Weekly_Deaths$Deaths),col="red",lwd=1.5)
+  geom_hline(yintercept = mean(Weekly_Deaths$new_deaths),col="red",lwd=1.5)
 ``` 
 
 #### Monthly Cases and Deaths
 
 ```{r}
 
-Monthly_Cases <- aggregate(Cases~Monthly,df,FUN=sum)
-Monthly_Deaths <- aggregate(Deaths~Monthly,df,FUN=sum)
+Monthly_Cases <- aggregate(new_cases~Monthly,df,FUN=sum)
+Monthly_Deaths <- aggregate(new_ceaths~Monthly,df,FUN=sum)
 Monthly_Cases$DRate <- Monthly_Deaths$Deaths/Monthly_Cases$Cases
-Monthly_Cases$LivedSaved <- Monthly_Cases$Cases * (max(Monthly_Cases$DRate) - Monthly_Cases$DRate) * 100
+Monthly_Cases$LivedSaved <- Monthly_Cases$new_cases * (max(Monthly_Cases$DRate) - Monthly_Cases$DRate) * 100
 ```
 ```{r}
-ggplot(Monthly_Cases) + geom_col(aes(x=Monthly,y=Cases)) +
+ggplot(Monthly_Cases) + geom_col(aes(x=Monthly,y=new_cases)) +
   labs(title="Monthly Cases") +
   scale_y_continuous(labels = scales::comma)
 
-ggplot(Monthly_Deaths) + geom_col(aes(x=Monthly,y=Deaths)) +
+ggplot(Monthly_Deaths) + geom_col(aes(x=Monthly,y=new_deaths)) +
   labs(title="Monthly Deaths") +
   scale_y_continuous(labels = scales::comma)
 ```
@@ -97,16 +97,13 @@ ggplot(Monthly_Deaths) + geom_col(aes(x=Monthly,y=Deaths)) +
 ### Plots of Cumulative Cases and Deaths
 
 ```{r}
-df <- df[order(df$Reported),]
-df$cumCases <- cumsum(df$Cases)
-df$cumDeaths <- cumsum(df$Deaths)
-```
+
 ```{r}
-ggplot(df) + geom_line(aes(x=Reported,y=cumCases),col="red") +
+ggplot(df) + geom_line(aes(x=date,y=total_cases),col="red") +
   labs(title="France's  Cumulative Cases") +
   scale_y_continuous(labels = scales::comma)
 
-ggplot(df) + geom_line(aes(x=Reported,y=cumDeaths),col="red") +
+ggplot(df) + geom_line(aes(x=date,y=total_deaths),col="red") +
   labs(title="France's  Cumulative Deaths")
 ```
 
